added card container and product container

--- a/index.html
+++ b/index.html
@@ -3,12 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4 th project</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     
+<header>
+<div class="container">
+    <div class=" product-tittle">
+        <h4 class="product-head">Influencer products</h4>
+    </div>
+
+<nav>
+    <ul>
+        <li>home</li>
+        <li>product</li>
+        <li>sign up</li>
+        <li>login</li>
+      
+    </ul>
+</nav>
+
+</div>
 
 
+
+
+
+<div class="journey-container">
+<div>
+    <h3>Start your Journey as <br>
+        Influencer</h3>
+        <p class="journey-para" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+<button class="primary-btn">preebook now </button>
+    </div>
+<img class="journey-camera" src="logos\images\main-camera.png" alt="">
+
+</div>
+
+<div class="card-container">
+<img class="pic" src="./logos/Alibaba.svg" alt="">
+<img  class="pic" src="./logos/Amazon.svg" alt="">
+<img  class="pic" src="./logos/Daraz.pk Logo.svg" alt="">
+<img  class="pic" src="./logos/Ebay.svg" alt="">
+<img  class="pic" src="./logos/Rakuten.svg" alt="">
+<img  class="pic" src="./logos/Target.svg" alt="">
+<img  class="pic" src="./logos/Walmart.svg" alt="">
+
+</div>
+</header>
+
+<main>
+
+</main>
+
+<footer>
+
+
+</footer>
 </body>
 </html>
